--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
         
         <div class="login-form">
             <h1>¡Bienvenido de nuevo!</h1>
-            <form action="procesar_formulario.php" method="post">
+            <form action="#" method="post">
                 <div class="form-mail">
                     <label for="mail">Email:</label>
                     <input type="email" id="mail" placeholder="Nombre de usuario" required>
@@ -85,7 +85,5 @@
             <p>Copyright &copy; 2023 ExceLEARN - Cursos de Excel</p>
         </footer>
     </body>
-
-
 
 </html>
